# conclave

./: .gitignore  .mcp.json  CLAUDE.md  README.md  charter-template.md  iusiurandum.md  kickstart.sh  nuke.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  primitives.md  pyproject.toml  teardown.sh  voting-strategies.md
.claude/skills/kanban-based-development/: SKILL.md
.claude/skills/kanban-md/: SKILL.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/: compose.yaml  observer.dockerfile  pod-mcp-config.json  pod.dockerfile
infra/dockerfiles/: forum.Dockerfile  mcp-coms.Dockerfile  mcp-decisions.Dockerfile  mcp-pods.Dockerfile  mcp-senate.Dockerfile  mcp-state.Dockerfile  observer.Dockerfile
infra/nginx/: forum.conf
infra/otel/: collector.yaml
infra/postgres/init/: 01-schemas.sql  02-operator.sql  03-senate.sql  04-council.sql  05-decisions.sql  06-pods.sql  07-observer.sql
infra/tempo/: tempo.yaml
infra/traefik/: traefik.yml
infra/traefik/dynamic/: .gitkeep
libs/conclave-core/: pyproject.toml
libs/conclave-core/src/conclave_core/: __init__.py  bus.py  db.py  events.py  models.py
personae/: Antony.md  Augustus.md  Brutus.md  Cassius.md  Cato.md  Cicero.md  Crassus.md  Gracchus.md  Pliny.md  Seneca.md  Tacitus.md  Vesta.md
platform/: pyproject.toml
platform/scripts/: demo_scenario.py  pod_spawner.py  wake_founder.py
platform/src/conclave_platform/: __init__.py
platform/src/conclave_platform/adapters/: __init__.py
platform/src/conclave_platform/adapters/base/: __init__.py
platform/src/conclave_platform/adapters/bus/: __init__.py  base.py  inmemory.py  nats_impl.py  redis_streams.py
platform/src/conclave_platform/adapters/ci/: __init__.py  base.py  github_actions.py  gitlab_ci.py
platform/src/conclave_platform/adapters/cli/: __init__.py  base.py  claude_code.py  pi.py
platform/src/conclave_platform/adapters/docs/: __init__.py  base.py  github_issues.py  inmemory.py  obsidian.py  senate_proxy.py  sqlite_impl.py
platform/src/conclave_platform/adapters/log/: __init__.py  base.py  loki.py  stdout.py
platform/src/conclave_platform/adapters/notify/: __init__.py  base.py  email.py  stdout.py  telegram.py
platform/src/conclave_platform/adapters/repo/: __init__.py  base.py  github.py  gitlab.py  local_git.py
platform/src/conclave_platform/adapters/runtime/: __init__.py  base.py  compose.py  k3d_terraform.py
platform/src/conclave_platform/adapters/trace/: __init__.py  base.py  linkerd.py  otel_tempo.py
platform/src/conclave_platform/core/: __init__.py  config.py  events.py  ids.py  models.py  time.py
platform/src/conclave_platform/harness/: __init__.py  agenda_parser.py  dual_writer.py  endpoints_parser.py  file_watcher.py  inbox.py  main.py
platform/src/conclave_platform/mcp/: __init__.py  _common.py
platform/src/conclave_platform/mcp/coms/: __init__.py  main.py  server.py
platform/src/conclave_platform/mcp/decisions/: __init__.py  main.py  server.py
platform/src/conclave_platform/mcp/senate/: __init__.py  main.py  server.py
platform/src/conclave_platform/mcp/state/: __init__.py  main.py  server.py
platform/src/conclave_platform/observer/: __init__.py  app.py  db.py  main.py  orm.py  repository.py  schema.py
platform/src/conclave_platform/senate_ledger/: __init__.py  app.py  main.py  observer_client.py  orm.py  repository.py  schema.py  service.py  strategies.py
platform/src/conclave_platform/wizard/: __init__.py  main.py  seed.py  templates.py
platform/tests/integration/: test_e2e_in_process.py
platform/tests/unit/: test_adapter_interfaces.py  test_bus_inmemory.py  test_ci_github_actions.py  test_cli_pi.py  test_core_config.py  test_core_events.py  test_core_models.py  test_docs_github_issues.py  test_docs_inmemory.py  test_docs_sqlite.py  test_harness.py  test_mcp_servers.py  test_notify.py  test_observer_app.py  test_observer_repository.py  test_repo_local_git.py  test_runtime_compose.py  test_senate_app.py  test_senate_strategies.py  test_stub_adapters.py  test_wizard.py
runs/: README.md
runs/2026-05-uber/: notes.md
runs/2026-05-uber/ux-research/: a-ornate-codex.md  b-hansard-archive.md  c-restrained-scriptorium.md
services/forum/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
services/forum/src/: App.tsx  api.ts  folio.tsx  index.css  main.tsx  sse.ts  theme.ts
services/mcp-coms/: pyproject.toml
services/mcp-coms/src/mcp_coms/: __init__.py  __main__.py  server.py  service.py
services/mcp-decisions/: pyproject.toml
services/mcp-decisions/src/mcp_decisions/: __init__.py  __main__.py  server.py  service.py
services/mcp-pods/: pyproject.toml
services/mcp-pods/src/mcp_pods/: __init__.py  __main__.py  docker_events.py  server.py  service.py  spawner.py  traefik.py
services/mcp-senate/: pyproject.toml
services/mcp-state/: pyproject.toml
services/mcp-state/src/mcp_state/: __init__.py  __main__.py  server.py
services/observer/: pyproject.toml
services/observer/src/observer/: __init__.py  config.py  main.py  otel_acl.py  state.py  tempo.py
services/observer/src/observer/api/: commands.py  inbox.py  ingest.py  state.py  stream.py
services/observer/src/observer/reactors/: annotation.py  annotation_reconciler.py  block.py  digester.py  health.py  identify_callers.py
services/observer/src/observer/services/: command_router.py  inbox.py  observation.py  operator.py
spec/: 00-vision.md  01-jtbd.md  02-event-storming.md  03-prototype-audit.md  04-wardley.md  05-ddd-contexts.md  06-atam.md  07-c4.md  08-v2-acceptance.md  09-forum-ux.md  brainstrom.md  forum-viz.md  v1-acceptance.md
spec/archive/: v1-acceptance.md  v1-forum-viz.md  v1-retro-alpha-1.md
tests/: run_acceptance.py  smoke_forum.py  smoke_music.py  test_e2e_smoke.py  test_image_swap.py  test_restart_persistence.py  test_senate_strategies.py
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/api/: client.ts  observer.ts
ui/src/components/: Nav.tsx  (+3 more)
(+47 files in other folders)
