[project]
name = "conclave-core"
version = "0.1.0"
description = "Shared events, models, bus and DB clients for conclave services"
authors = [
    { name = "Thibault Viglino", email = "thibault@thvi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "nats-py>=2.9",
    "pydantic>=2.9",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
