[project]
name = "mcp-pods"
version = "0.1.0"
description = "conclave mcp-pods service"
authors = [
    { name = "Thibault Viglino", email = "thibault@thvi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "conclave-core",
    "fastapi>=0.115",
    "fastmcp>=2.0",
    "nats-py>=2.14.0",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
conclave-core = { workspace = true }
