[project]
name = "mcp-state"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thibault Viglino", email = "thibault@thvi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "conclave-core",
    "fastmcp>=2.0",
    "httpx>=0.28.1",
]

[project.scripts]
mcp-state = "mcp_state:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
conclave-core = { workspace = true }
