[project]
name = "observer"
version = "0.1.0"
description = "Observer — Forum's API and read-model writer"
authors = [
    { name = "Thibault Viglino", email = "thibault@thvi.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "conclave-core",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "nats-py>=2.9",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
conclave-core = { workspace = true }
